// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-tree-view.vue Demo-Data 方式 1`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>employee</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>asset</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" disabled="disabled" style="padding-left: 0px;" tabindex>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
  </a>
</div>
`;

exports[`u-tree-view.vue Demo-Data 方式 2`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-Data 方式 3`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" selected="selected" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-Data 方式 4`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" disabled="disabled" style="padding-left: 0px;" tabindex>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-Tag 和 Data 混合 1`] = `
<div class="root">
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="expander" expand-trigger="click" style="width: 30px;"></div>
      <div class="text" draggable="false" style="margin-left: 30px;">
        <span>应用1</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="expander" expand-trigger="click" style="width: 30px;"></div>
      <div class="text" draggable="false" style="margin-left: 30px;">
        <span>应用2</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="expander" expand-trigger="click" style="width: 30px;"></div>
      <div class="text" draggable="false" style="margin-left: 30px;">
        <span>应用4</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-Tag 方式 1`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" selected="selected" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-Tag 方式 2`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-Tag 方式 3`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" selected="selected" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-Tag 方式 4`] = `
<div>
  <div class="root">
    <div class="root" vusion-slot-name="default">
      <div class="root" readonly="readonly">
        <div class="root">
          <div class="item" readonly="readonly" style="padding-left: 0px;" tabindex>
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" readonly="readonly" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" readonly="readonly" style="padding-left: 30px;" tabindex>
                <div class="expander" expand-trigger="click" style="width: 30px;"></div>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
                <div class="root">
                  <div class="item" readonly="readonly" style="padding-left: 60px;" tabindex>
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.1</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" readonly="readonly" style="padding-left: 60px;" tabindex>
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.2</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
              </div>
            </div>
            <div class="root">
              <div class="item" readonly="readonly" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.3</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" readonly="readonly" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.4</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" readonly="readonly" style="padding-left: 0px;" tabindex>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" readonly="readonly" style="padding-left: 0px;" tabindex>
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" readonly="readonly" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" readonly="readonly" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" vusion-slot-name="default">
      <div class="root" disabled="disabled">
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 0px;" tabindex>
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="expander" expand-trigger="click" style="width: 30px;"></div>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
                <div class="root">
                  <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex>
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.1</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex>
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.2</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.3</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.4</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 0px;" tabindex>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 0px;" tabindex>
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" vusion-slot-name="default">
      <div class="root">
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="expander" expand-trigger="click" style="width: 30px;"></div>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
                <div class="root">
                  <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.1</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.2</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.3</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.4</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 0px;" tabindex>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-可取消 1`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-多选 1`] = `
<div class="root">
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="false"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 1</span>
      </div>
    </div>
    <div class="sub">
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.1</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.2</span>
          </div>
        </div>
        <div class="sub">
          <div class="root">
            <div class="item" style="padding-left: 60px;" tabindex="0">
              <div class="text" draggable="false" style="margin-left: 30px;">
                <label class="root" tabindex="0">
                  <span class="box" status="false"></span>
                  <span vusion-slot-name="item"> </span>
                </label>
                <span>节点 1.2.1</span>
              </div>
            </div>
            <div class="sub" style="display: none;">
            </div>
          </div>
          <div class="root">
            <div class="item" style="padding-left: 60px;" tabindex="0">
              <div class="text" draggable="false" style="margin-left: 30px;">
                <label class="root" tabindex="0">
                  <span class="box" status="false"></span>
                  <span vusion-slot-name="item"> </span>
                </label>
                <span>节点 1.2.2</span>
              </div>
            </div>
            <div class="sub" style="display: none;">
            </div>
          </div>
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.3</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.4</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="false"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 2</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="false"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 3</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-多选 2`] = `
<div class="root">
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="null"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 1</span>
      </div>
    </div>
    <div class="sub">
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.1</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="true"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.2</span>
          </div>
        </div>
        <div class="sub">
          <div class="root">
            <div class="item" style="padding-left: 60px;" tabindex="0">
              <div class="text" draggable="false" style="margin-left: 30px;">
                <label class="root" tabindex="0">
                  <span class="box" status="true"></span>
                  <span vusion-slot-name="item"> </span>
                </label>
                <span>节点 1.2.1</span>
              </div>
            </div>
            <div class="sub" style="display: none;">
            </div>
          </div>
          <div class="root">
            <div class="item" style="padding-left: 60px;" tabindex="0">
              <div class="text" draggable="false" style="margin-left: 30px;">
                <label class="root" tabindex="0">
                  <span class="box" status="true"></span>
                  <span vusion-slot-name="item"> </span>
                </label>
                <span>节点 1.2.2</span>
              </div>
            </div>
            <div class="sub" style="display: none;">
            </div>
          </div>
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="true"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.3</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.4</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="false"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 2</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="true"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 3</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-多选 3`] = `
<div class="root">
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="true"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 1</span>
      </div>
    </div>
    <div class="sub">
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.1</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="true"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.2</span>
          </div>
        </div>
        <div class="sub">
          <div class="root">
            <div class="item" style="padding-left: 60px;" tabindex="0">
              <div class="text" draggable="false" style="margin-left: 30px;">
                <label class="root" tabindex="0">
                  <span class="box" status="true"></span>
                  <span vusion-slot-name="item"> </span>
                </label>
                <span>节点 1.2.1</span>
              </div>
            </div>
            <div class="sub" style="display: none;">
            </div>
          </div>
          <div class="root">
            <div class="item" style="padding-left: 60px;" tabindex="0">
              <div class="text" draggable="false" style="margin-left: 30px;">
                <label class="root" tabindex="0">
                  <span class="box" status="true"></span>
                  <span vusion-slot-name="item"> </span>
                </label>
                <span>节点 1.2.2</span>
              </div>
            </div>
            <div class="sub" style="display: none;">
            </div>
          </div>
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.3</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
      <div class="root">
        <div class="item" style="padding-left: 30px;" tabindex="0">
          <div class="text" draggable="false" style="margin-left: 30px;">
            <label class="root" tabindex="0">
              <span class="box" status="false"></span>
              <span vusion-slot-name="item"> </span>
            </label>
            <span>节点 1.4</span>
          </div>
        </div>
        <div class="sub" style="display: none;">
        </div>
      </div>
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="false"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 2</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
  <div class="root">
    <div class="item" style="padding-left: 0px;" tabindex="0">
      <div class="text" draggable="false" style="margin-left: 30px;">
        <label class="root" tabindex="0">
          <span class="box" status="false"></span>
          <span vusion-slot-name="item"> </span>
        </label>
        <span>节点 3</span>
      </div>
    </div>
    <div class="sub" style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-字段路径 1`] = `
<div class="root">
  <div class="root" size="small">
    <div class="rotate">
      <span class="lcp-iconv icon">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-loading" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-展开/折叠触发方式 1`] = `
<div>
  <div class="root">
    <div class="root" expand-trigger="click" vusion-slot-name="default">
      <p>整行点击均可触发（默认）</p>
      <div class="root">
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1</span>
            </div>
          </div>
          <div class="sub">
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.1</span>
                </div>
              </div>
              <div class="sub">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2</span>
                </div>
              </div>
              <div class="sub">
                <div class="root">
                  <div class="item" style="padding-left: 60px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.1</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" style="padding-left: 60px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.2</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.3</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.4</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" vusion-slot-name="default">
      <p>仅点击小箭头时触发</p>
      <div class="root">
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="expander" expand-trigger="click-expander" expanded="true" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1</span>
            </div>
          </div>
          <div class="sub">
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.1</span>
                </div>
              </div>
              <div class="sub">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="expander" expand-trigger="click-expander" expanded="true" style="width: 30px;"></div>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2</span>
                </div>
              </div>
              <div class="sub">
                <div class="root">
                  <div class="item" style="padding-left: 60px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.1</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" style="padding-left: 60px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点 1.2.2</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.3</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.4</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 0px;" tabindex="0">
            <div class="expander" expand-trigger="click-expander" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 30px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 3.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-异步加载 1`] = `
<div class="root">
  <div class="root" size="small">
    <div class="rotate">
      <span class="lcp-iconv icon">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-loading" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-手风琴 1`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.1.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.1.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.3.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.3.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 2.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 2.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-统一操作 1`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" tabindex="0">
            <span class="box" status="false"></span>
            <span vusion-slot-name="item"> </span>
          </label>
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" tabindex="0">
                <span class="box" status="false"></span>
                <span vusion-slot-name="item"> </span>
              </label>
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" disabled="disabled" tabindex="0">
                <span class="box" disabled="disabled" status="false"></span>
                <span vusion-slot-name="item"> </span>
              </label>
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub">
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <label class="root" disabled="disabled" tabindex="0">
                    <span class="box" disabled="disabled" status="false"></span>
                    <span vusion-slot-name="item"> </span>
                  </label>
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <label class="root" disabled="disabled" tabindex="0">
                    <span class="box" disabled="disabled" status="false"></span>
                    <span vusion-slot-name="item"> </span>
                  </label>
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" tabindex="0">
                <span class="box" status="false"></span>
                <span vusion-slot-name="item"> </span>
              </label>
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" tabindex="0">
                <span class="box" status="false"></span>
                <span vusion-slot-name="item"> </span>
              </label>
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" tabindex="0">
            <span class="box" status="false"></span>
            <span vusion-slot-name="item"> </span>
          </label>
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" tabindex="0">
            <span class="box" status="false"></span>
            <span vusion-slot-name="item"> </span>
          </label>
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
  </div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      全部选中</a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      全部取消</a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      全部展开</a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      全部收起</a>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-自定义模板 1`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>
            📁
            文件夹1
          </span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>
                📁
                文件夹1.1
              </span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>
                📁
                文件夹1.2
              </span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>
                    📄
                    文件1.2.1
                  </span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>
                    📄
                    文件1.2.2
                  </span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>
                📄
                文件1.3
              </span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>
                📄
                文件1.4
              </span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>
            📁
            文件夹2
          </span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>
            📁
            文件夹3
          </span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>
                📄
                文件3.1
              </span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>
                📄
                文件3.2
              </span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-节点显示/隐藏 1`] = `
<div>
  <div class="root">
    <div class="root" style="display: none;">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点1</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点1.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
        <div class="root" style="display: none;">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点3.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点3.2</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tree-view.vue Demo-遍历和查找 1`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 1</span>
        </div>
      </div>
      <div class="sub">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.2</span>
            </div>
          </div>
          <div class="sub">
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <span>节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <span>节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
  </div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      遍历所有节点</a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      查找末尾为\`4\`的节点</a>
  </div>
</div>
`;
